--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,17 @@
+@font-face {
+  font-family: "Lato";
+  src: url(/src/font/Lato-Bold.ttf);
+}
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  font-family: Lato;
   margin: auto;
   max-width: 38rem;
   padding: 2rem;
+
+  background-color: rgba(0, 0, 0, 0.1);
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+  text-shadow: 1px 1px 3px black;
 }
