--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,7 @@
 
 body {
   font-family: Lato;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  padding: 8px;
 
   background-color: rgba(0, 0, 0, 0.1);
   color: white;
